fixes for proper browser packaging

--- a/demos/circle.html
+++ b/demos/circle.html
@@ -11,11 +11,9 @@
 
  <script type='text/javascript'>
 
-var canvasamino = require('canvasamino');
-var amino = require('amino');
+var amino = require('aminogfx');
 console.log('amino = ', amino);
 amino.setCanvas('canvas');
-
 amino.start(function(core, stage) {
     var root = new amino.Group();
     stage.setRoot(root);
