--- a/demos/circle.html
+++ b/demos/circle.html
@@ -79,6 +79,16 @@ amino.start(function(core, stage) {
         console.log("hiding");
         visrect.visible(false);
     });
+
+
+    var animrect = new amino.Rect().w(20).h(20).fill('#00ff00').x(120).y(150).visible(true);
+    root.add(animrect);
+    animrect.acceptsMouseEvents = true;
+    core.on('press',animrect, function(e) {
+        animrect.opacity.anim().from(1.0).to(0.0).dur(1000).loop(-1).start();
+        amino.refresh();
+        //animrect.x.anim().from(0.0).to(100.0).dur(1000).loop(-1).start();
+    });
 });
 </script>
 </html>
